@@ -2002,3 +2002,8 @@ Version 16
 	Modified ChartGenerator so that the DataSetChangeEvent is fired prior to writing to
 		the movie (so any additional modifications to the chart are reflected in that
 		movie frame).
+	Modifications to ChartGenerator to make it easier to create charts as displays which can
+		be used to generate movies.  Update the howto.html documentation to reflect this.
+	Revised the SimState constructors -- making deprecated and private constructors protected.
+		This makes it easier to use MASON with other toolkits (such as ECJ) which are
+		in control of the random number generator.
